ripple-server: update UI.

--- a/server/src/main/resources/ui/GetConfig.html
+++ b/server/src/main/resources/ui/GetConfig.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Ripple Server</title>
+    <title>Ripple Server - 查询配置</title>
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
@@ -95,15 +95,36 @@
                 <h2>查询配置</h2>
             </div>
             <div>
+                <p>
+                    当前服务器节点本地存储中共检索到 <strong>2</strong> 条配置。
+                </p>
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th></th>
+                        <th>序号</th>
+                        <th>应用名称</th>
+                        <th>键</th>
+                        <th>值</th>
+                        <th>最后修改时间</th>
+                        <th>服务器ID</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-
+                        <td>1</td>
+                        <td>tomcat</td>
+                        <td>connection-timeout</td>
+                        <td>5000</td>
+                        <td>2020年11月27日 16:55:13</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>tomcat</td>
+                        <td>mysql-user-name</td>
+                        <td>root</td>
+                        <td>2020年11月27日 16:50:25</td>
+                        <td>1</td>
                     </tr>
                     </tbody>
                 </table>
